<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/back_image"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="600dp"
                    android:contentDescription="@string/corona"
                    android:scaleX="1.8"
                    android:scaleY="1.7"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    app:srcCompat="@drawable/coronadrimage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/covid_image"
                        app:srcCompat="@drawable/coronaimage" />

                    <TextView
                        style="@style/standardLayout"
                        android:gravity="center"
                        android:text="@string/covid_19"
                        android:textColor="@color/colorWhite"
                        android:textSize="26sp" />

                    <TextView
                        style="@style/standardLayout"
                        android:gravity="center"
                        android:text="@string/stay_home"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/selectCounty_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/countrybtn"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/select_country" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/global_status"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="10dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:background="@color/colorBlue" />

                            <TextView
                                style="@style/standardLayout"
                                android:layout_marginLeft="@dimen/textMargin"
                                android:layout_marginRight="@dimen/textMargin"
                                android:text="@string/active"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/textMargin"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:background="@color/colorGreen" />

                            <TextView
                                style="@style/standardLayout"
                                android:layout_marginLeft="@dimen/textMargin"
                                android:layout_marginRight="@dimen/textMargin"
                                android:text="@string/recovered"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/textMargin"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:background="@color/colorRed" />

                            <TextView
                                style="@style/standardLayout"
                                android:layout_marginLeft="@dimen/textMargin"
                                android:layout_marginRight="@dimen/textMargin"
                                android:text="@string/deaths"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/textMargin"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:background="@color/colorOrange" />

                            <TextView
                                style="@style/standardLayout"
                                android:layout_marginLeft="@dimen/textMargin"
                                android:layout_marginRight="@dimen/textMargin"
                                android:text="@string/critical"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp">


                <com.leo.simplearcloader.SimpleArcLoader
                    android:visibility="visible"
                    android:id="@+id/loader_totalCases"
                  android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:arc_style="simple_arc">
                </com.leo.simplearcloader.SimpleArcLoader>

                <LinearLayout
                    android:id="@+id/totalCases_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cases"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/totalCases_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="36sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/active"
                        android:src="@drawable/ic_group_381">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/activeCases_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/colorBlue"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/totalDeaths_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/colorRed"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/recoverCases_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="26sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/tactive"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/death"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/recover"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp">

                <com.leo.simplearcloader.SimpleArcLoader
                    android:visibility="visible"
                    android:id="@+id/loader_moreDetails"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:arc_style="simple_arc">
                </com.leo.simplearcloader.SimpleArcLoader>

                <LinearLayout
                    android:id="@+id/moreDetails_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/textMargin"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/today_cases" />

                        <TextView
                            android:id="@+id/todayCases"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/today_deaths" />

                        <TextView
                            android:id="@+id/todayDeath"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/critical" />

                        <TextView
                            android:id="@+id/criticalCases"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/total_test" />

                        <TextView
                            android:id="@+id/totalTest"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/critical" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>